--- a/sass/app/_cards.scss
+++ b/sass/app/_cards.scss
@@ -72,12 +72,12 @@
     padding: ms(-8) ms(-5);
 
     .error-list {
-        @include adjust-font-size-to(ms(-1));
+        font-size: .75em;
     }
 
     .alert-bar--success {
-        @include adjust-font-size-to(ms(-1));
-        margin-bottom: ms(-1);
+        font-size: .75em;
+        margin-bottom: .5em;
     }
 }
 
