Move hal from web-core/hal to hal/hal

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -79,7 +79,7 @@
     <h3 id="bugs">{{ macros.status_icon('Who should I contact regarding bugs or feature requests?') }}</h3>
     <p>
         Hal is developed and maintained by the Web Core team. To report bugs or request a new features, please
-        submit an issue in the GitHub repository at <a href="http://git/web-core/hal/issues">http://git/web-core/hal</a>.
+        submit an issue in the GitHub repository at <a href="http://git/hal/hal/issues">http://git/hal/hal</a>.
     </p>
 
     <p>For general questions or critical errors, you can contact Web Core through the following methods:</p>
