--- a/templates/latest-release.twig
+++ b/templates/latest-release.twig
@@ -12,7 +12,7 @@
     <h2>Past Releases</h2>
     <p>Check the following documentation sites for recent changes to Hal, or view past updates.</p>
     <ul class="list--bullet">
-        <li><a href="http://git/web-core/hal/releases">GitHub release notes</a></li>
+        <li><a href="http://git/hal/hal/releases">GitHub release notes</a></li>
         <li><a href="https://jira/projects/HAL?selectedItem=com.atlassian.jira.jira-projects-plugin:release-page&status=all">Jira version history</a></li>
         <li>
             Hal release notes
