Dynamically load event log data
Event log context are now only visibile if you have js, as its lazy loaded from
the api. Build and push pages with massive amounts of output should load and
render a bit faster now.

Fix #209

--- a/sass/base/_code.scss
+++ b/sass/base/_code.scss
@@ -25,9 +25,7 @@ pre {
 
 .pre-ansi pre {
     background: black;
-}
-.pre-solarized pre {
-    background: #073642;
+    color: white;
 }
 
 // this is stupid, but will allow auto-overflowing of contained pre's without mangling its whitespace
