--- a/templates/push/push.twig
+++ b/templates/push/push.twig
@@ -111,6 +111,6 @@
     </div>
 
     <h2>Event Log</h2>
-    {% include '_partial/log-table.twig' with {'logs': logs} %}
+    {% include '_partial/log-table.twig' with { logs: logs, canLoad: push.isFinished } %}
 
 {% endblock %}
