Add 2.8 release notes

--- a/templates/_partial/help.release-notes.twig
+++ b/templates/_partial/help.release-notes.twig
@@ -1,23 +1,54 @@
 {% block release_notes %}
     <ul class="list--bullet">
         <li>
-            <a href="/docs/release-notes-2.4.0.html">2.4</a>
+            <b><a href="/docs/release-notes-2.4.0.html">2.4</a></b>
+            <small>(Elastic Beanstalk, EC2, <code>hal9000.yml</code>, and encrypted properties)</small>
+
             <ul class="list--bullet">
-                <li><a href="/docs/release-notes-2.4.1.html">2.4.1</a></li>
-                <li><a href="/docs/release-notes-2.4.2.html">2.4.2</a></li>
+                <li>
+                    <b><a href="/docs/release-notes-2.4.1.html">2.4.1</a></b>
+                    <small>(Minor UX fixes)</small>
+                </li>
+                <li>
+                    <b><a href="/docs/release-notes-2.4.2.html">2.4.2</a></b>
+                    <small>(Bugfixes)</small>
+                </li>
             </ul>
         </li>
-        <li><a href="/docs/release-notes-2.5.0.html">2.5</a></li>
         <li>
-            <a href="/docs/release-notes-2.6.0.html">2.6</a>
+            <b><a href="/docs/release-notes-2.5.0.html">2.5</a></b>
+            <small>(Docker, dedicated servers)</small>
+        </li>
+        <li>
+            <b><a href="/docs/release-notes-2.6.0.html">2.6</a></b>
+            <small>(Kraken, rebuilt permissions)</small>
+
             <ul class="list--bullet">
-                <li><a href="/docs/release-notes-2.6.1.html">2.6.1</a></li>
-                <li><a href="/docs/release-notes-2.6.2.html">2.6.2</a></li>
-                <li><a href="/docs/release-notes-2.6.3.html">2.6.3</a></li>
-                <li><a href="/docs/release-notes-2.6.4.html">2.6.4</a></li>
+                <li>
+                    <b><a href="/docs/release-notes-2.6.1.html">2.6.1</a></b>
+                    <small>(Kraken update for QKS)</small>
+                </li>
+                <li>
+                    <b><a href="/docs/release-notes-2.6.2.html">2.6.2</a></b>
+                    <small>(Deployment pools, live event logs, S3 support)</small>
+                </li>
+                <li>
+                    <b><a href="/docs/release-notes-2.6.3.html">2.6.3</a></b>
+                    <small>(Kraken update for QKS)</small>
+                </li>
+                <li>
+                    <b><a href="/docs/release-notes-2.6.4.html">2.6.4</a></b>
+                    <small>(Kraken bugfixes)</small>
+                </li>
             </ul>
         </li>
-        <li><a href="/docs/release-notes-2.7.0.html">2.7</a></li>
-        <li><a href="/docs/release-notes-2.8.0.html">2.8</a></li>
+        <li>
+            <b><a href="/docs/release-notes-2.7.0.html">2.7</a></b>
+            <small>(CodeDeploy support, Kraken batch encryption)</small>
+        </li>
+        <li>
+            <b><a href="/docs/release-notes-2.8.0.html">2.8</a></b>
+            <small>(Autodeploy after build, using multiple docker containers during build)</small>
+        </li>
     </ul>
 {% endblock %}
