--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -209,6 +209,9 @@
     </p>
 
     <h3 id="release-notes">{{ macros.status_icon('Release Notes') }}</h3>
+    <p>
+        Details about the latest release are always available at <a href="{{ urlFor('latest.release') }}">/latest-release</a>.
+    </p>
     {% include '_partial/help.release-notes.twig' %}
 {% endblock %}
 
