Move gravatar default to config

--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -84,7 +84,7 @@
 
     <p>For general questions or critical errors, you can contact Web Core through the following methods:</p>
     <ul class="list--bullet">
-        <li><strong><a href="hipchat://www.hipchat.com/room/1036795">[Team] Web Core</strong></a> (Hipchat)</li>
+        <li><a href="hipchat://www.hipchat.com/room/1036795">[Team] Web Core</a> (Hipchat)</li>
         <li>{{ wcContact|raw }} (email)</li>
     </ul>
 {% endblock %}
