Try to fix good browser zooming

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,8 @@
             {% endblock %}
             {% block page_meta %}
                 <meta name="format-detection" content="telephone=no">
-                <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+                <meta name="viewport" content="width=device-width">
+                <meta http-equiv="x-ua-compatible" content="ie=edge">
             {% endblock %}
             {% block style %}
                 <link rel="stylesheet" href="/css/style.css?v={{ buster }}">
