Add js to styleguide pages so IE will display icons

--- a/templates/styleguide.icons.html.twig
+++ b/templates/styleguide.icons.html.twig
@@ -444,5 +444,8 @@ zoom-out-2
                 {% endfor %}
             </ul>
         </main>
+
+        <script src="/js/vendor.bundle.js?v={{ buster }}"></script>
+        <script src="/js/app.js?v={{ buster }}"></script>
     </body>
 </html>
