--- a/templates/styleguide.html.twig
+++ b/templates/styleguide.html.twig
@@ -353,6 +353,9 @@
             </section>
 
         </main>
+
+        <script src="/js/vendor.bundle.js?v={{ buster }}"></script>
+        <script src="/js/app.js?v={{ buster }}"></script>
     </body>
 </html>
 
