Move star to active svg icons

--- a/templates/latest-release.twig
+++ b/templates/latest-release.twig
@@ -79,13 +79,21 @@ build:
 
     <h3>User Experience (UX) Enhancements</h3>
     <ul class="list--bullet">
-        <li>Automatically select an environment for building from user preferences</li>
-        <li>Add more descriptive event messages for build commands</li>
+        <li>Automatically select an environment for building from user preferences.</li>
+        <li>Add more descriptive event messages for build commands.</li>
     </ul>
 
     <h3>Bugs</h3>
     <ul class="list--bullet">
-        <li>Fix unresponsive build menu in Chrome</li>
+        <li>Fix unresponsive build menu in Chrome.</li>
+        <li>Fix many UI issues in Good Browser.</li>
+    </ul>
+
+    <h3>Technical</h3>
+    <ul class="list--bullet">
+        <li>PECL Libsodium updated to 1.0</li>
+        <li>Docker updated to 1.9</li>
+        <li>MCP Panthor updated to 2.3</li>
     </ul>
 {% endblock %}
 
