Update error and maintenance pages to match base template

--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -7,7 +7,9 @@
 <html class="no-js" id="error-page">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+        <meta name="format-detection" content="telephone=no">
+        <meta name="viewport" content="width=device-width">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
 
         <title>
             {{ page_title }} - {{ applicationEnvironment == 'prod' ? applicationTitle : applicationEnvironment|upper }}
