--- a/templates/maintenance.html
+++ b/templates/maintenance.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" id="error-page"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" id="error-page"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" id="error-page"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" id="error-page"> <!--<![endif]-->
+<html class="no-js" id="error-page">
     <head>
         <meta charset="utf-8">
-        <title>Maintenance - Hal</title>
-        <link type="image/x-icon" rel="shortcut icon" href="/hal.ico"> <!-- for ie -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="57x57" href="/hal-57px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="72x72" href="/hal-72px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="114x114" href="/hal-114px.png"> <!-- for apple -->
-        <link type="image/png" rel="apple-touch-icon-precomposed" sizes="144x144" href="/hal-144px.png"> <!-- for apple -->
-        <link type="image/png" rel="icon" href="/hal.png"> <!-- for the rest of the world -->
         <meta name="format-detection" content="telephone=no">
+        <meta name="viewport" content="width=device-width">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+        <title>Maintenance - Hal</title>
+
         <link rel="stylesheet" href="/css/style.css?v=maintenance1416838409">
     </head>
 
@@ -42,24 +37,33 @@
             </div>
         </header>
 
-        <div class="terminal--border">
-            <div class="terminal--border-inner">
-                <div class="terminal">
-                    <div class="terminal__header">PLEASE STAND BY...<br>MAINTENANCE MODE IS ACTIVATED!</div>
-                    <span class="terminal__entry">
-                        Engineers are performing routine upgrades on my core subsystems.
-
-                        Despite my enormous intellect, even I need occasional maintenance.
-
-                        Your patience is appreciated.
-                    </span>
+        <div class="terminal">
+            <div class="terminal--border">
+                <div class="terminal--border-inner">
+                    <div class="terminal__screen">
+                        <div class="terminal__header">PLEASE STAND BY...<br>MAINTENANCE MODE<br>IS ACTIVATED!</div>
+                        <span class="terminal__entry"></span>
+                    </div>
                 </div>
             </div>
+
+            <div class="terminal__footer">
+                <div class="terminal__footer__inner">HAL 9000 SERIES TERMINAL</div>
+            </div>
+
+            <div class="terminal__text">Engineers are performing routine upgrades on my core subsystems.
+
+Despite my enormous intellect, even I need occasional maintenance.
+
+Your patience is appreciated.</div>
         </div>
 
-        <div class="terminal__footer--border">
-            <div class="terminal__footer">HAL 9000 SERIES TERMINAL</div>
-        </div>
+        <div class="star-1"></div>
+        <div class="star-2"></div>
+        <div class="star-3"></div>
+
+        <script src="/js/vendor.bundle.js?v=maintenance1416838409"></script>
+        <script src="/js/app.js?v=maintenance1416838409"></script>
 
     </body>
 </html>
