Add changelog for 2.8.1

--- a/templates/_partial/help.release-notes.twig
+++ b/templates/_partial/help.release-notes.twig
@@ -49,6 +49,13 @@
         <li>
             <b><a href="/docs/release-notes-2.8.0.html">2.8</a></b>
             <small>(Autodeploy after build, using multiple docker containers during build)</small>
+
+            <ul class="list--bullet">
+                <li>
+                    <b><a href="/docs/release-notes-2.8.1.html">2.8.1</a></b>
+                    <small>(Dash account support)</small>
+                </li>
+            </ul>
         </li>
     </ul>
 {% endblock %}
