Fix bad aws doc link in help

--- a/templates/help/application-setup.twig
+++ b/templates/help/application-setup.twig
@@ -251,7 +251,7 @@
         <li class="mvn"><a href="http://docs.aws.amazon.com/codedeploy/latest/userguide/welcome.html">What is AWS CodeDeploy?</a></li>
         <li class="mvn"><a href="http://docs.aws.amazon.com/codedeploy/latest/userguide/app-spec-ref.html">AWS CodeDeploy AppSpec File Reference</a></li>
         <li class="mvn"><a href="http://docs.aws.amazon.com/codedeploy/latest/userguide/how-to-add-appspec-file.html">Add an AppSpec File to a Revision for AWS CodeDeploy</a></li>
-        <li class="mvn"><a href="http://docs.aws.amazon.com/codedeploy/latest/userguide/how-to-run-agent.html#how-to-run-agent-install-linux">Add an AppSpec File to a Revision for AWS CodeDeploy</a></li>
+        <li class="mvn"><a href="http://docs.aws.amazon.com/codedeploy/latest/userguide/how-to-run-agent-install.html">Install or Reinstall the AWS CodeDeploy Agent</a></li>
     </ul>
 
     <small>
