Stub out 2.9 release page

--- a/templates/_partial/help.release-notes.twig
+++ b/templates/_partial/help.release-notes.twig
@@ -57,5 +57,9 @@
                 </li>
             </ul>
         </li>
+        <li>
+            <b><a href="/docs/release-notes-2.9.0.html">2.9</a></b>
+            <small>(Bugfixes)</small>
+        </li>
     </ul>
 {% endblock %}
