Add org picker and collapsable sections to apps page
Fix #177

--- a/sass/app/_js.tablesaw.scss
+++ b/sass/app/_js.tablesaw.scss
@@ -10,6 +10,16 @@ main {
 
 .tablesaw-stack {
 
+    .js-collapsible-global {
+        text-align: right;
+    }
+    .tablesaw-stack-hidden {
+        display: none;
+        @include breakpoint($bp-medium) {
+            display: block;
+        }
+    }
+
     .js-toggle-container {
         display: none;
         @include breakpoint($bp-medium) {
