--- a/templates/application/applications.twig
+++ b/templates/application/applications.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 {% import _self as page_macros %}
 {% import "_partial/macros.twig" as macros %}
-{% set js_components = ["favorites"] %}
+{% set js_components = ["favorites", "collapsible"] %}
 
 {% set page_title = "Applications" %}
 
@@ -25,39 +25,52 @@
             </tbody>
         </table>
 
-        <h2>All Applications</h2>
-
     {% endif %}
 
-    <table class="table--spacing-medium" data-tablesaw-mode="stack">
+    <h2>Organizations</h2>
+
+    <ul class="toc-list">
+        {% for group_id, group_applications in applications %}
+            {% set group = groups[group_id] %}
+            {% if group_applications %}
+                <li><a href="#org-{{ group_id }}">{{ group.name }}</a></li>
+            {% endif %}
+        {% endfor %}
+    </ul>
+
+    <h2>Applications</h2>
+
+    <table class="table--spacing-medium js-collapsible" data-tablesaw-mode="stack">
         <thead>
             <tr>
                 <th>Application</th>
                 <th class="t50">GitHub Source</th>
-                <th class="t5"></th>
+                <th class="t10 tr js-collapsible-global"></th>
             </tr>
         </thead>
-        <tbody class="table-breathe">
+
             {% set hasApplications = false %}
 
             {% for group_id, group_applications in applications %}
-                {% set group = groups[group_id] %}
-                <tr>
-                    <th colspan="4" class="table-mid-header">
-                        <a href="{{ urlFor('group', {id: group.id}) }}">{{ group.name }}</a>
-                    </th>
-                </tr>
-
-                {% if group_applications %}
-                    {% set hasApplications = true %}
-                    {% for application in group_applications %}
-                        {{ page_macros.app_row(getCurrentUser(), application) }}
-                    {% endfor %}
-                {% else %}
+                <tbody class="table-breathe">
+                    {% set group = groups[group_id] %}
                     <tr>
-                        <td colspan="4">No applications found.</td>
+                        <th colspan="4" class="table-mid-header" id="org-{{ group_id}}">
+                            <a href="{{ urlFor('group', {id: group.id}) }}">{{ group.name }}</a>
+                        </th>
                     </tr>
-                {% endif %}
+
+                    {% if group_applications %}
+                        {% set hasApplications = true %}
+                        {% for application in group_applications %}
+                            {{ page_macros.app_row(getCurrentUser(), application, true) }}
+                        {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td colspan="4">No applications found.</td>
+                        </tr>
+                    {% endif %}
+                </tbody>
             {% endfor %}
 
             {% if not hasApplications %}
@@ -65,7 +78,6 @@
                     <td colspan="4">There are no groups.</td>
                 </tr>
             {% endif %}
-        </tbody>
     </table>
 
     <ul class="button-list button-list--half">
@@ -74,9 +86,14 @@
     </ul>
 {% endblock %}
 
-{% macro app_row(currentUser, application) %}
+{% macro app_row(currentUser, application, allow_collapse) %}
     {% import "_partial/macros.twig" as macros %}
-    <tr>
+
+    {% if allow_collapse %}
+        <tr class="js-collapsible-row">
+    {% else %}
+        <tr>
+    {% endif %}
         <td>
             {% if currentUser.settings.isFavoriteApplication(application) %}
                 <form method="post" action="{{ urlFor('settings.favorite_applications.remove.handler', {application: application.id}) }}" data-app-id="{{ application.id }}" class="form--fav">
@@ -96,7 +113,7 @@
             <a href="{{ urlFor('application.status', {'application': application.id}) }}">{{ application.name }}</a>
         </td>
         <td>{{ macros.gitsource(application) }}</td>
-        <td>
+        <td class="tr">
             <a href="{{ urlFor('application', {'application': application.id}) }}">Manage</a>
         </td>
     </tr>
